# music-notes

./: chord-voicing-drills.md  editing_music.md  finding-tunes.md  guitar-intensive-notes.md  jazz-piano-chord-drills.md  jazz-tunes.md  maj7b5-chords.md  musescore.md  nightime-routine.md  piano-resources.md  pop-guitar-resources.md  progressions-in-A-L.md  rhythm-changes.md  sfpl-easy-jazz-keys-books.md  sfpl-jazz-books.md  strudel.md
app0/: README.md  blues-with-melody.html  shell-voicings-soundfont.html  shell-voicings-tonejs.html  walking-blues.html
bass-transcriptions/: blue-7-intro.md  blue-sprint-shuffle-intro.abc  bye-bye-blackbird--don-bagley.md  softly-in-seattle.md
ffmpeg/: README.md  flake.nix
jazz-sandwich-arrangements/: epistrophy.abc
jazz-standards/: all-the-things-you-are  i-love-you.md  i-remember-you.md  in-your-sweet-way.md  its-you-or-no-one.md  just-friends  like-someone-in-love.md  on-green-dolphin-st  stella-by-starlight.md  take-the-a-train  weaver-of-dreams  you-stepped-out-of-a-dream.md
old-notes-as-of-2025-08/: maj7b5-chords.md  nightime-routine.md  piano-exercises.md
practicing-2025/: bass.md  bluegrass.md  blues.md  fifths.md  written-piano.md  (+1 more)
python/chord_charts/: .envrc  chord-chart-format.md  flake.nix  pyproject.toml
python/chord_charts/src/chord_charts/: __init__.py  linearize.py  model.py  notes.py  parser.py  transforms.py  validation.py
python/chord_charts/tests/: strategies.py  test_bar_validation.py  test_document_validation.py  test_linearize.py  test_model.py  test_notes.py  test_parser.py  test_transforms.py
(+28 files in other folders)
