[project]
name = "chord-charts"
version = "0.1.0"
description = "Chord chart language implementation bootstrap"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "hypothesis>=6.135.0",
    "pyrefly>=0.18.0",
    "pytest>=8.4.0",
]

[tool.uv]
package = false
default-groups = ["dev"]

[tool.pyrefly]
project-includes = ["**/*.py*"]
search_path = ["src", "."]

[tool.pytest.ini_options]
pythonpath = ["src"]
